# rust-profiling

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: compute_shader.rs  heap_profiler.rs  main.rs  stack_profiler.rs
src/shaders/: sum.wgsl
