[package]
name = "rust-profiling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hot-lib-reloader = { version = "0.6.5" }

wgpu = { version = "0.17.0" }
winit = { version = "0.28.6" }
image = { version = "0.24.6" }

rayon = { version = "1.7.0" }
wide = { version = "0.7.10" }

enum_dispatch = { version = "0.3.11" }

wasm-bindgen = { version = "0.2.87" }
wasm-pack = { version = "0.12.0" }

rand = { version = "0.8.5" }
bytemuck = { version = "1.13.1" }
futures-intrusive = { version = "0.5.0" }
env_logger = { version = "0.10.0" }
pollster = { version = "0.3.0" }

[build-dependencies]        # for converting the rust shaders to spir-v
spirv-builder = "0.9"
